# triosdb_docker

./: .gitignore  Dockerfile  app.py  dependencies.py  main.py  pyproject.toml  tasks.py
configs/: logging_config.py  response_model.py  settings.py
manager/: __init__.py  app.py  dependencies.py  manager.py
manager/commands/: archive_commands.py  basic_commands.py  filter_commands.py
manager/models/: response_model.py  validate.py
manager/routes/: command.py  login.py  upload.py
routes/: command.py  login.py  upload.py
session/: __init__.py  client.py  connector.py  manager.py
session/commands/: archive_commands.py  basic_commands.py  filter_commands.py
src/: client.py  connector.py  server.py  triplets.py
tests/notebooks/: start_stop_redis.sh  test_all.ipynb
utils/: file_to_data_hierarchical.py  triplets.py  utilities.py
